[gd_scene load_steps=6 format=2]

[ext_resource path="res://InterfaceWindows/CreatureDisplay.gd" type="Script" id=1]
[ext_resource path="res://Tiles/blank.png" type="Texture" id=2]
[ext_resource path="res://Resources/Aracdy.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/ZodiacTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Creature.tscn" type="PackedScene" id=5]

[node name="CreatureDisplay" type="Node2D"]
z_index = 6
script = ExtResource( 1 )

[node name="BackSprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 16, 8 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
custom_fonts/font = ExtResource( 3 )
text = "DISPLAY: Creature"

[node name="ZodiacTile" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 16 )

[node name="Creature" parent="." instance=ExtResource( 5 )]
position = Vector2( 208, 16 )
z_index = 2

[node name="NameLabel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = 40.0
margin_bottom = -55.0
custom_fonts/font = ExtResource( 3 )
text = "Name:"

[node name="ZodiacLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 27.0
margin_right = 40.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 3 )
text = "Sign:"

[node name="WeaponLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 36.0
margin_right = 40.0
margin_bottom = 9.0
text = "Equipped Item:"
